# GeometricToolsSamples

./: README.md
AnimatedWireMesh/: CMakeLists.txt  WireMeshWindow3.cpp  WireMeshWindow3.h
AnimatedWireMesh/Shaders/: WireMesh.vs.glsl
GLTFWiremesh/: CMakeLists.txt  FreeMouseCameraRig.cpp  FreeMouseCameraRig.h  MouseMoveWindow3.cpp  MouseMoveWindow3.h  WireMeshMain.cpp  WireMeshWindow3.cpp  WireMeshWindow3.h
Lights/: CMakeLists.txt
WireMesh/: CMakeLists.txt  WireMeshWindow3.cpp  WireMeshWindow3.h
WireMesh/gtest/: MyWindow.h  gtest.cpp  gtest.h  gtest.vcxproj  gtest.vcxproj.filters
WireMesh/gtest/Debug/: vc141.idb
WireMesh/gtest/Debug/gtest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  gtest.lastbuildstate
WireMesh/gtest/x64/Debug/: vc141.idb
WireMesh/gtest/x64/Debug/gtest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  gtest.lastbuildstate
